--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="conteudo">
         <h2>Kathylleen, você me daria a honra de um encontro?</h2>
-        <a href="https://wa.me/5521970346565?text=Eu%20aceito%20casar%20com%20voc%C3%AA%20meu%20lind%C3%A3o"><button class="btn" onclick="sim()">Sim</button></a>
+        <a href="https://wa.me/5521970346565?text=Eu%20aceito%20sair%20com%20voc%C3%AA%20meu%20lind%C3%A3o"><button class="btn" onclick="sim()">Sim</button></a>
         <button class="btn" onclick="desvia(this)" onmouseover="desvia(this)">Não</button>   
 
 
